force-app/main/default/objects/Round_Robin_Queue__c/Round_Robin_Queue__c.object-meta.xml
<CustomObject>
    <description>Master object to hold round robin queue information</description>
    <label>Round Robin Queue</label>
    <nameField>
        <label>Round Robin Queue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Round Robin Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>