force-app/main/default/objects/Round_Robin_Queue__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>Which object is this round robin queue associated to?</description>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>