force-app/main/default/objects/Round_Robin_Queue__c/fields/Total_Active_Members__c.field-meta.xml
<CustomField>
    <fullName>Total_Active_Members__c</fullName>
    <description>How many active queue members are associated to this queue</description>
    <label>Total Active Members</label>
    <summaryFilterItems>
        <field>Round_Robin_Queue_Member__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Round_Robin_Queue_Member__c.Round_Robin_Queue__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>