force-app/main/default/objects/Round_Robin_Queue__c/fields/Total_Members__c.field-meta.xml
<CustomField>
    <fullName>Total_Members__c</fullName>
    <description>Counts all the round robin queue members associated on this queue</description>
    <label>Total Members</label>
    <summaryForeignKey>Round_Robin_Queue_Member__c.Round_Robin_Queue__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>