force-app/main/default/objects/Round_Robin_Queue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Object__c</columns>
    <columns>Total_Active_Members__c</columns>
    <columns>Total_Members__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>