force-app/main/default/objects/Round_Robin_Queue__c/listViews/All_Queues.listView-meta.xml
<ListView>
    <fullName>All_Queues</fullName>
    <columns>NAME</columns>
    <columns>Object__c</columns>
    <columns>Total_Active_Members__c</columns>
    <columns>Total_Members__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Queues</label>
</ListView>